update values
